--- a/pppppp/View/OnboardingView/OnboardingView3.storyboard
+++ b/pppppp/View/OnboardingView/OnboardingView3.storyboard
@@ -19,30 +19,20 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="morflax-studio-18" translatesAutoresizingMaskIntoConstraints="NO" id="jVk-hM-wdn">
                                 <rect key="frame" x="-33" y="63" width="520" height="507"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Oy-Bi-1j8">
-                                <rect key="frame" x="16" y="522" width="240" height="48"/>
-                                <string key="text">運動・歩数を
-</string>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMn-tQ-toU">
-                                <rect key="frame" x="16" y="570" width="363" height="48"/>
-                                <string key="text">増やしてポイントを
-</string>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="毎日アプリを開いて" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JMn-tQ-toU">
+                                <rect key="frame" x="16" y="562" width="363" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="集めよう" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQY-mH-XKG">
-                                <rect key="frame" x="16" y="618" width="161" height="48"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ポイントを獲得" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQY-mH-XKG">
+                                <rect key="frame" x="16" y="610" width="282" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dUx-mH-y87">
-                                <rect key="frame" x="270" y="706" width="64" height="64"/>
+                                <rect key="frame" x="286" y="706" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="64" id="8th-hL-EnA"/>
                                     <constraint firstAttribute="height" constant="64" id="O81-ov-sUJ"/>
@@ -56,7 +46,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ff-gf-RZq">
-                                <rect key="frame" x="56" y="706" width="64" height="64"/>
+                                <rect key="frame" x="40" y="706" width="64" height="64"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="64" id="1Ki-Iv-0DQ"/>
                                     <constraint firstAttribute="height" constant="64" id="mLe-bz-EwD"/>
@@ -72,17 +62,15 @@
                         <color key="backgroundColor" red="0.070588235289999995" green="0.0" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="hQY-mH-XKG" firstAttribute="top" secondItem="JMn-tQ-toU" secondAttribute="bottom" id="6fR-Or-lTp"/>
-                            <constraint firstItem="0Ff-gf-RZq" firstAttribute="leading" secondItem="e61-av-5UV" secondAttribute="leading" constant="56" id="Aih-GM-CUV"/>
+                            <constraint firstItem="0Ff-gf-RZq" firstAttribute="leading" secondItem="e61-av-5UV" secondAttribute="leading" constant="40" id="Aih-GM-CUV"/>
                             <constraint firstItem="hQY-mH-XKG" firstAttribute="leading" secondItem="e61-av-5UV" secondAttribute="leading" constant="16" id="Cs8-0E-Ruq"/>
-                            <constraint firstItem="1Oy-Bi-1j8" firstAttribute="leading" secondItem="e61-av-5UV" secondAttribute="leading" constant="16" id="KPf-RS-7s8"/>
                             <constraint firstItem="e61-av-5UV" firstAttribute="bottom" secondItem="dUx-mH-y87" secondAttribute="bottom" constant="40" id="Lu7-4E-dkg"/>
                             <constraint firstItem="jVk-hM-wdn" firstAttribute="leading" secondItem="6qx-zZ-TX1" secondAttribute="leading" constant="-33" id="Whz-5y-WNZ"/>
                             <constraint firstItem="e61-av-5UV" firstAttribute="bottom" secondItem="0Ff-gf-RZq" secondAttribute="bottom" constant="40" id="cfq-wk-UVl"/>
-                            <constraint firstItem="dUx-mH-y87" firstAttribute="top" secondItem="hQY-mH-XKG" secondAttribute="bottom" constant="40" id="fEb-G2-d5v"/>
+                            <constraint firstItem="dUx-mH-y87" firstAttribute="top" secondItem="hQY-mH-XKG" secondAttribute="bottom" constant="48" id="fEb-G2-d5v"/>
                             <constraint firstAttribute="trailing" secondItem="jVk-hM-wdn" secondAttribute="trailing" constant="-97" id="iDm-lf-Qzl"/>
-                            <constraint firstItem="e61-av-5UV" firstAttribute="trailing" secondItem="dUx-mH-y87" secondAttribute="trailing" constant="56" id="mEW-TY-jfY"/>
+                            <constraint firstItem="e61-av-5UV" firstAttribute="trailing" secondItem="dUx-mH-y87" secondAttribute="trailing" constant="40" id="mEW-TY-jfY"/>
                             <constraint firstItem="jVk-hM-wdn" firstAttribute="top" secondItem="e61-av-5UV" secondAttribute="top" constant="16" id="pGF-3q-eCz"/>
-                            <constraint firstItem="JMn-tQ-toU" firstAttribute="top" secondItem="1Oy-Bi-1j8" secondAttribute="bottom" id="pof-im-nt3"/>
                             <constraint firstItem="e61-av-5UV" firstAttribute="bottom" secondItem="jVk-hM-wdn" secondAttribute="bottom" constant="240" id="r4V-0g-hHU"/>
                             <constraint firstItem="JMn-tQ-toU" firstAttribute="leading" secondItem="e61-av-5UV" secondAttribute="leading" constant="16" id="red-Rd-a6y"/>
                         </constraints>
